keycloak/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
      - platform.192.168.99.108.nip.io
  rules:
  - host: platform.192.168.99.108.nip.io
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak
          servicePort: http
